# brueggerei-djangocms-demo

./: .gitignore  Dockerfile  docker-compose.yml  nginx.conf  production.yml  pyproject.toml  start.sh
.claude/: settings.local.json
docs/prd/: 2026-01-16-events.md  2026-01-16-teams.md
events/: admin.py  cms_apps.py  cms_plugins.py  cms_toolbars.py  models.py  views.py
events/migrations/: 0001_initial.py  0002_upcomingeventspluginmodel.py  0003_alter_event_options_alter_event_end_time_and_more.py
events/templates/events/: event_detail.html  event_list.html
events/templates/events/plugins/: upcoming_events.html
teams/: admin.py  cms_plugins.py  cms_toolbars.py  models.py
teams/migrations/: 0001_initial.py  0002_userprofile_telephone.py  0003_teampluginmodel_userpluginmodel.py
teams/templates/teams/plugins/: team.html  user.html
website/: settings.py  settings_production.py  urls.py
website/templates/: base.html
